<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout
        android:id="@+id/main_button_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/main_current_session_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_current_session_button"
            style="@style/MainButtonStyle"
            tools:text="Display Current Session" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/main_room_sessions_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_room_sessions_button"
            style="@style/MainButtonStyle"
            tools:text="Display Upcoming Sessions" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/main_event_stats_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_event_stats_button"
            style="@style/MainButtonStyle"
            tools:text="Display Event Stats" />

    </LinearLayout>
</layout>