<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="25dp"
    tools:context=".MainActivity">

  <TextView
      android:id="@+id/main_title"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/app_name"
      android:textColor="@color/colorText"
      android:textSize="25sp"
      android:gravity="center_horizontal"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toTopOf="parent"/>

  <TextView
      android:id="@+id/selected_room"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/main_title"
      android:textSize="30sp"
      android:layout_margin="15dp"
      android:textColor="@color/colorPrimaryDark"
      android:text="@string/select_room"/>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/selected_room"
      app:layout_constraintEnd_toStartOf="@id/main_frame_view"
      android:layout_margin="20dp"
      android:orientation="horizontal">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rooms_list_rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

  </LinearLayout>

  <FrameLayout
      android:id="@+id/main_frame_view"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@id/main_title">

    <LinearLayout
        android:id="@+id/main_button_list"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:gravity="center"
        android:orientation="vertical">

      <androidx.appcompat.widget.AppCompatButton
          android:id="@+id/main_current_session_button"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/main_current_session_button"
          style="@style/MainButtonStyle"
          tools:text="Display Current Session" />

      <androidx.appcompat.widget.AppCompatButton
          android:id="@+id/main_room_sessions_button"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:paddingHorizontal="15dp"
          android:text="@string/main_room_sessions_button"
          style="@style/MainButtonStyle"
          tools:text="Display Upcoming Sessions" />

      <androidx.appcompat.widget.AppCompatButton
          android:id="@+id/main_event_stats_button"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/main_event_stats_button"
          style="@style/MainButtonStyle"
          tools:text="Display Event Stats" />

    </LinearLayout>

  </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>